--- a/MP1/styles.css
+++ b/MP1/styles.css
@@ -174,7 +174,8 @@ label {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
-  padding: 0 1.5em 1.5em 1.5em;
+  /* padding: 1em 1.5em 1.5em 1.5em; */
+  padding: 1.5em;
 }
 
 .hero-image-container {
