--- a/MP1/styles.css
+++ b/MP1/styles.css
@@ -61,7 +61,7 @@ label {
 }
 
 .hitems {
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
 /* mobile styles */
@@ -89,10 +89,11 @@ label {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  padding: 1em;
 }
 
 .header-logo {
-  width: 150px;
+  width: 180px;
 }
 
 .header-items {
@@ -533,9 +534,13 @@ footer {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  padding: 0.5em;
+  padding: 0.3em;
   box-shadow: 0px -8px 16px #ffbb0080;
-  gap: 1em;
+  gap: 0.5em;
+}
+
+footer h5 a {
+  color: var(--primary);
 }
 
 .f-icons {
@@ -545,17 +550,21 @@ footer {
   align-items: center;
   gap: 1em;
   position: relative;
-  font-size: 1.5em;
-  padding: 5px;
+  font-size: 1.4em;
+  padding: 3px;
 }
 .f-icons a {
   color: #ffffff;
 }
 
+.f-icons a i {
+  padding: 5px;
+}
+
 .f-icons a i:hover {
   /* padding: 5px; */
   /* border: 1px solid var(--quaternary); */
-  border-radius: 1px;
+  border-radius: 5px;
   box-shadow: 0 0 10px 1px var(--quaternary);
   transition: 0.2s;
   transform: scale(1.2);
@@ -582,7 +591,7 @@ footer {
     padding: 0 3em;
   }
   .header-logo {
-    width: 180px;
+    width: 190px;
   }
   .hero-container {
     align-items: center;
@@ -637,11 +646,14 @@ footer {
 @media only screen and (min-width: 820px) {
   /* body em */
   body {
-    font-size: 15px;
+    font-size: 18px;
   }
   /* header */
   .header-menu {
     padding: 0 5em;
+  }
+  .header-logo {
+    width: 200px;
   }
   .header-items {
     display: flex;
@@ -712,7 +724,7 @@ footer {
 @media only screen and (min-width: 1200px) {
   /* body em */
   body {
-    font-size: 16px;
+    font-size: 20px;
   }
   /* header */
   .header-menu {
