--- a/24-rock_paper_scissor_game/RPSG/styles.css
+++ b/24-rock_paper_scissor_game/RPSG/styles.css
@@ -60,8 +60,7 @@ p {
   justify-content: center;
   align-items: center;
   gap: 2em;
-}
-
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 /* screen container */
 .screen-container {
   display: flex;
@@ -147,8 +146,8 @@ p {
   animation: shakeplayer 1s linear;
 }
 #computer-turn-image img {
-    position: relative;
-    right: -10px;
+  position: relative;
+  right: -10px;
   animation: shakecomputer 1s linear;
 }
 
