--- a/weather-app/style.css
+++ b/weather-app/style.css
@@ -1,77 +1,135 @@
-* {
-  margin: 0;
+/* reset */
+*,
+*:after,
+*:before {
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
+/* variables */
+:root {
+  --text: #0a1524;
+  --background: #dbe6f5;
+  --primary: #e0c094;
+  --secondary: #c0d2ed;
+  --accent: #ae7a32;
+}
+
+/* font family */
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mooli&display=swap");
+
 body {
-  background-color: #222;
-}
-
-.main {
-  max-width: 100%;
-  height: 90dvh;
-  color: #fff;
-  font-size: 1rem;
-  text-align: center;
-  margin: 5em auto 0;
-  padding: 2.5em 2em;
-  border-radius: 1.2em;
-  background: linear-gradient(135deg, #4caecf, #fefefe);
-}
-
-input {
-  padding: 1em;
-}
-
-#weather-input {
-  border: 1px solid #fff;
-  border-radius: 1.2em;
-}
-
-#search-weather-btn {
-  color: #fff;
-  background-color: #4caecf;
-  border: 1px solid #fff;
-  border-radius: 1.2em;
-  cursor: pointer;
+  background-color: var(--background);
+  font-family: "Inter", sans-serif;
 }
 
 #app {
-  max-width: 450px;
-  color: #000000;
-  font-size: 1rem;
-  text-align: center;
-  margin: 5em auto 0;
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 h1 {
-  color: #222;
-  font-size: 1.5rem;
+  font-family: "Mooli", sans-serif;
 }
 
-@media screen and (min-width: 601px) and (max-width: 960px) {
-  .main {
-    max-width: 70%;
-    height: 40dvh;
-  }
-
-  #search-weather-input {
-    padding: 0.75em 2em;
-    border: 1px solid #fff;
-    border-radius: 1.2em;
-  }
-
-  #search-weather-btn {
-    padding: 0.75em 1.5em;
-    border: 1px solid #fff;
-    border-radius: 1.2em;
-  }
+form,
+article {
+  width: 350px;
 }
 
-@media screen and (min-width: 961px) {
-  .main {
-    max-width: 30%;
-    height: 40dvh;
-  }
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  flex: 1;
+  border: none;
+  border-radius: 20px 0 0 20px;
+  padding: 1rem 2rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
+    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
+    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+
+input:focus {
+  outline: 1px solid var(--accent);
+}
+
+button {
+  background: var(--accent);
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  border-radius: 0 20px 20px 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
+    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
+    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+
+  color: var(--text);
+  font-weight: bold;
+}
+
+button:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
+}
+
+#card {
+  background-color: var(--primary);
+  padding: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1em;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+#weather-icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-right: 2px solid var(--text);
+  padding: 1rem;
+  flex: 0.9;
+}
+
+img {
+  align-self: center;
+  width: 100%;
+  mix-blend-mode: darken;
+}
+
+#weather-data-container {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  flex: 1;
+}
+
+#weather-temp {
+  font-size: 32px;
+  color: var(--text);
+}
+
+#weather-type {
+  font-size: 24px;
+  color: var(--text);
+  font-weight: bold;
+}
+
+#date {
+  font-style: italic;
+  color: var(--text);
 }
