--- a/dictionary-app/style.css
+++ b/dictionary-app/style.css
@@ -7,28 +7,29 @@
 
 /* root variables */
 :root {
-  --text: #0a2922;
-  --text2: #5e5e5e;
-  --background: #f7fdfc;
-  --primary: #5db3d5;
-  --secondary: #cad3f1;
-  --accent: #3150bf;
+  --text2: #383838;
+
+  --text: #1f230b;
+  --background: #f0f4dc;
+  --primary: #52922f;
+  --secondary: #cfc9ee;
+  --accent: #8739b1;
 }
 
 /* font family */
-@import url("https://fonts.googleapis.com/css2?family=Inter&family=Poppins&display=swap");
-
-/* body-background */
-body {
-  background: var(--background);
-  font-family: "Poppins", sans-serif;
-  display: flex;
-  justify-content: center;
-  font-size: 16px;
-}
+@import url("https://fonts.googleapis.com/css?family=Averia Sans Libre:700|Cantarell:400");
 
 /* MUST READ: please change body font size if you want to change it. Remember em is just multipliers and below are the customized value of each h tags */
-/* font sizes */
+/* font sizes & styles */
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Averia Sans Libre";
+  font-weight: 700;
+}
+
 h1 {
   font-size: 2em;
 }
@@ -42,8 +43,22 @@ p {
   font-size: 0.9em;
 }
 
-/* start of app */
+/* body-background */
+body {
+  font-family: "Cantarell";
+  font-size: 16px;
+  font-weight: 400;
 
+  /* background-color: var(--background);
+  background-image: url(src/doodle-dictionary.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; */
+  display: flex;
+  justify-content: center;
+}
+
+/* start of app */
 #app {
   display: flex;
   flex-direction: column;
@@ -52,18 +67,21 @@ p {
   gap: 1em;
 
   height: 100dvh;
-  width: 420px;
-  margin: 0 1em;
+  width: 520px;
+  margin: 2em;
 }
 
 .dictionary-container {
-  background-color: var(--secondary);
+  background-color: var(--primary);
   display: flex;
   flex-direction: column;
   padding: 2em 3em;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 #app,
@@ -72,11 +90,18 @@ p {
   position: relative;
 }
 
+.title {
+  align-self: center;
+  padding: 0 0 1em 0;
+
+  color: var(--text);
+}
+
 .search-box {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding-bottom: 0.5em;
+  padding-bottom: 0.8em;
 }
 
 .search-box input {
@@ -100,7 +125,7 @@ p {
 }
 
 .search-box #search-btn {
-  background-color: var(--primary);
+  background-color: var(--accent);
   border: none;
   outline: none;
   border-radius: 0px 5px 5px 0;
@@ -118,7 +143,7 @@ button:active {
 
 .search-box :where(#close-btn) {
   font-size: 16px;
-  color: #8e8e8e;
+  color: var(--text2);
 
   position: absolute;
   right: 30%;
@@ -128,7 +153,7 @@ button:active {
 
 .text-info {
   font-size: 0.8em;
-  color: #5e5e5e;
+  color: var(--text2);
 }
 
 .word-container {
@@ -175,7 +200,7 @@ ul {
 }
 
 .word-keyword button:active {
-  color: var(--accent);
+  color: var(--secondary);
 }
 
 .word-type .details {
@@ -218,7 +243,8 @@ span {
 
 .signature > p > span {
   color: var(--accent);
-  font-size: 1em;
+  font-size: 1.2em;
+  font-weight: bold;
 }
 
 @media only screen and (max-width: 414px) {
